UI: Allow popup info text to break Bugfix: Correctly show entity method UI for static methods instead of global method UI Improvement: Do not block Cmd/Ctrl + R in code area if no "run" button is visible

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -3880,6 +3880,7 @@ span.context-help-text {
 	border: 1px solid var(--gray-777);
 	padding: 4px 10px;
 	max-width: 250px;
+	white-space: normal;
 	font-weight: normal;
 	text-align: left;
 	z-index: 1012;
